// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors/venues should get a list a of categories 1`] = `Object {}`;

exports[`selectors/venues should get a list a of categories 2`] = `Object {}`;

exports[`selectors/venues should get a list of next venues 1`] = `Object {}`;

exports[`selectors/venues should get a list of next venues 2`] = `
Object {
  "4b410414f964a5206dbf25e3": Object {
    "categories": Array [
      Object {
        "icon": Object {
          "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/apparel_",
          "suffix": ".png",
        },
        "id": "4bf58dd8d48988d103951735",
        "name": "Clothing Store",
        "pluralName": "Clothing Stores",
        "primary": true,
        "shortName": "Apparel",
      },
    ],
    "id": "4b410414f964a5206dbf25e3",
    "location": Object {
      "address": "184 Broadway (at Driggs)",
      "cc": "US",
      "city": "Brooklyn",
      "country": "United States",
      "crossStreet": "btwn Driggs Ave & Roebling St",
      "formattedAddress": Array [
        "184 Broadway (at Driggs) (btwn Driggs Ave & Roebling St)",
        "Brooklyn, NY 11211",
        "United States",
      ],
      "labeledLatLngs": Array [
        Object {
          "label": "display",
          "lat": 40.709751,
          "lng": -73.962264,
        },
      ],
      "lat": 40.709751,
      "lng": -73.962264,
      "postalCode": "11211",
      "state": "NY",
    },
    "name": "Brooklyn Industries",
  },
}
`;

exports[`selectors/venues should get a list of recommended places 1`] = `Object {}`;

exports[`selectors/venues should get a list of recommended places 2`] = `
Object {
  "49b6e8d2f964a52016531fe3": Object {
    "reasons": Object {
      "count": 0,
      "items": Array [
        Object {
          "reasonName": "globalInteractionReason",
          "summary": "This spot is popular",
          "type": "general",
        },
      ],
    },
    "venue": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1f5941735",
          "name": "Gourmet Shop",
          "pluralName": "Gourmet Shops",
          "primary": true,
          "shortName": "Gourmet",
        },
      ],
      "id": "49b6e8d2f964a52016531fe3",
      "location": Object {
        "address": "179 E Houston St",
        "cc": "US",
        "city": "New York",
        "country": "United States",
        "crossStreet": "btwn Allen & Orchard St",
        "distance": 130,
        "formattedAddress": Array [
          "179 E Houston St (btwn Allen & Orchard St)",
          "New York, NY 10002",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.72286707707289,
            "lng": -73.98829148466851,
          },
        ],
        "lat": 40.72286707707289,
        "lng": -73.98829148466851,
        "postalCode": "10002",
        "state": "NY",
      },
      "name": "Russ & Daughters",
      "venuePage": Object {
        "id": "77298563",
      },
    },
  },
}
`;

exports[`selectors/venues should get a list of similar venues 1`] = `Object {}`;

exports[`selectors/venues should get a list of similar venues 2`] = `
Object {
  "4c5ef77bfff99c74eda954d3": Object {
    "categories": Array [
      Object {
        "icon": Object {
          "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
          "suffix": ".png",
        },
        "id": "4bf58dd8d48988d1f5941735",
        "name": "Gourmet Shop",
        "pluralName": "Gourmet Shops",
        "primary": true,
        "shortName": "Gourmet",
      },
    ],
    "id": "4c5ef77bfff99c74eda954d3",
    "location": Object {
      "address": "200 5th Ave",
      "cc": "US",
      "city": "New York",
      "country": "United States",
      "crossStreet": "at W 23rd St",
      "formattedAddress": Array [
        "200 5th Ave (at W 23rd St)",
        "New York, NY 10010",
        "United States",
      ],
      "labeledLatLngs": Array [
        Object {
          "label": "display",
          "lat": 40.74198696405861,
          "lng": -73.98991319280194,
        },
      ],
      "lat": 40.74198696405861,
      "lng": -73.98991319280194,
      "postalCode": "10010",
      "state": "NY",
    },
    "name": "Eataly",
  },
}
`;

exports[`selectors/venues should get a specific venue 1`] = `undefined`;

exports[`selectors/venues should get a specific venue 2`] = `
Object {
  "categories": Array [
    Object {
      "icon": Object {
        "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
        "suffix": ".png",
      },
      "id": "4bf58dd8d48988d1cc941735",
      "name": "Steakhouse",
      "pluralName": "Steakhouses",
      "primary": true,
      "shortName": "Steakhouse",
    },
  ],
  "hasPerk": false,
  "id": "3fd66200f964a5209beb1ee3",
  "location": Object {
    "address": "178 Broadway",
    "cc": "US",
    "city": "Brooklyn",
    "country": "United States",
    "crossStreet": "at Driggs Ave",
    "distance": 10,
    "formattedAddress": Array [
      "178 Broadway (at Driggs Ave)",
      "Brooklyn, NY 11211",
      "United States",
    ],
    "labeledLatLngs": Array [
      Object {
        "label": "display",
        "lat": 40.70995790682886,
        "lng": -73.96229110893742,
      },
    ],
    "lat": 40.70995790682886,
    "lng": -73.96229110893742,
    "postalCode": "11211",
    "state": "NY",
  },
  "name": "Peter Luger Steak House",
  "referralId": "v-1565543515",
  "venuePage": Object {
    "id": "77462637",
  },
}
`;

exports[`selectors/venues should get categories of a venue 1`] = `Array []`;

exports[`selectors/venues should get categories of a venue 2`] = `
Array [
  Object {
    "icon": Object {
      "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
      "suffix": ".png",
    },
    "id": "4bf58dd8d48988d1cc941735",
    "name": "Steakhouse",
    "pluralName": "Steakhouses",
    "primary": true,
    "shortName": "Steakhouse",
  },
]
`;

exports[`selectors/venues should get location of a venue 1`] = `null`;

exports[`selectors/venues should get location of a venue 2`] = `
Object {
  "address": "178 Broadway",
  "cc": "US",
  "city": "Brooklyn",
  "country": "United States",
  "crossStreet": "at Driggs Ave",
  "distance": 10,
  "formattedAddress": Array [
    "178 Broadway (at Driggs Ave)",
    "Brooklyn, NY 11211",
    "United States",
  ],
  "labeledLatLngs": Array [
    Object {
      "label": "display",
      "lat": 40.70995790682886,
      "lng": -73.96229110893742,
    },
  ],
  "lat": 40.70995790682886,
  "lng": -73.96229110893742,
  "postalCode": "11211",
  "state": "NY",
}
`;

exports[`selectors/venues should get venues 1`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`selectors/venues should get venues 2`] = `
Object {
  "categories": Object {},
  "entities": Object {
    "3fd66200f964a5209beb1ee3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1cc941735",
          "name": "Steakhouse",
          "pluralName": "Steakhouses",
          "primary": true,
          "shortName": "Steakhouse",
        },
      ],
      "hasPerk": false,
      "id": "3fd66200f964a5209beb1ee3",
      "location": Object {
        "address": "178 Broadway",
        "cc": "US",
        "city": "Brooklyn",
        "country": "United States",
        "crossStreet": "at Driggs Ave",
        "distance": 10,
        "formattedAddress": Array [
          "178 Broadway (at Driggs Ave)",
          "Brooklyn, NY 11211",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.70995790682886,
            "lng": -73.96229110893742,
          },
        ],
        "lat": 40.70995790682886,
        "lng": -73.96229110893742,
        "postalCode": "11211",
        "state": "NY",
      },
      "name": "Peter Luger Steak House",
      "referralId": "v-1565543515",
      "venuePage": Object {
        "id": "77462637",
      },
    },
  },
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {
    "4b410414f964a5206dbf25e3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/apparel_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d103951735",
          "name": "Clothing Store",
          "pluralName": "Clothing Stores",
          "primary": true,
          "shortName": "Apparel",
        },
      ],
      "id": "4b410414f964a5206dbf25e3",
      "location": Object {
        "address": "184 Broadway (at Driggs)",
        "cc": "US",
        "city": "Brooklyn",
        "country": "United States",
        "crossStreet": "btwn Driggs Ave & Roebling St",
        "formattedAddress": Array [
          "184 Broadway (at Driggs) (btwn Driggs Ave & Roebling St)",
          "Brooklyn, NY 11211",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.709751,
            "lng": -73.962264,
          },
        ],
        "lat": 40.709751,
        "lng": -73.962264,
        "postalCode": "11211",
        "state": "NY",
      },
      "name": "Brooklyn Industries",
    },
  },
  "recommendedPlaces": Object {
    "49b6e8d2f964a52016531fe3": Object {
      "reasons": Object {
        "count": 0,
        "items": Array [
          Object {
            "reasonName": "globalInteractionReason",
            "summary": "This spot is popular",
            "type": "general",
          },
        ],
      },
      "venue": Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1f5941735",
            "name": "Gourmet Shop",
            "pluralName": "Gourmet Shops",
            "primary": true,
            "shortName": "Gourmet",
          },
        ],
        "id": "49b6e8d2f964a52016531fe3",
        "location": Object {
          "address": "179 E Houston St",
          "cc": "US",
          "city": "New York",
          "country": "United States",
          "crossStreet": "btwn Allen & Orchard St",
          "distance": 130,
          "formattedAddress": Array [
            "179 E Houston St (btwn Allen & Orchard St)",
            "New York, NY 10002",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.72286707707289,
              "lng": -73.98829148466851,
            },
          ],
          "lat": 40.72286707707289,
          "lng": -73.98829148466851,
          "postalCode": "10002",
          "state": "NY",
        },
        "name": "Russ & Daughters",
        "venuePage": Object {
          "id": "77298563",
        },
      },
    },
  },
  "similarVenues": Object {
    "4c5ef77bfff99c74eda954d3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1f5941735",
          "name": "Gourmet Shop",
          "pluralName": "Gourmet Shops",
          "primary": true,
          "shortName": "Gourmet",
        },
      ],
      "id": "4c5ef77bfff99c74eda954d3",
      "location": Object {
        "address": "200 5th Ave",
        "cc": "US",
        "city": "New York",
        "country": "United States",
        "crossStreet": "at W 23rd St",
        "formattedAddress": Array [
          "200 5th Ave (at W 23rd St)",
          "New York, NY 10010",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.74198696405861,
            "lng": -73.98991319280194,
          },
        ],
        "lat": 40.74198696405861,
        "lng": -73.98991319280194,
        "postalCode": "10010",
        "state": "NY",
      },
      "name": "Eataly",
    },
  },
  "trendingEntities": Object {},
  "venuesListed": Object {
    "others-Lists from other people": Object {
      "count": 1277,
      "items": Array [
        Object {
          "canonicalUrl": "https://foursquare.com/thesparkgroup/list/nyc-bars-w-free-wifi",
          "collaborative": false,
          "createdAt": 1341267590,
          "description": "",
          "editable": false,
          "followers": Object {
            "count": 108,
          },
          "id": "4ff21e86e4b0ac2746c17ac1",
          "listItems": Object {
            "count": 147,
            "items": Array [
              Object {
                "createdAt": 1341320340,
                "id": "v4cbcafab035d236aebebe64e",
              },
            ],
          },
          "name": "NYC Bars w/ Free Wi-Fi",
          "photo": Object {
            "createdAt": 1316910845,
            "height": 720,
            "id": "4e7e76fd46906788c6b9da00",
            "prefix": "https://igx.4sqi.net/img/general/",
            "suffix": "/XZYJNQSANIQTTIDP4ZFTEUDXF50Q5234VCKEEMXII1JSV0XS.jpg",
            "user": Object {
              "firstName": "John",
              "gender": "male",
              "id": "123456",
              "lastName": "Doe",
              "photo": Object {
                "prefix": "https://igx.4sqi.net/img/user/",
                "suffix": "/123456.jpg",
              },
            },
            "visibility": "public",
            "width": 537,
          },
          "public": true,
          "type": "others",
          "updatedAt": 1474559629,
          "url": "/thesparkgroup/list/nyc-bars-w-free-wifi",
          "user": Object {
            "firstName": "The Spark Group",
            "gender": "none",
            "id": "2027973",
            "photo": Object {
              "prefix": "https://igx.4sqi.net/img/user/",
              "suffix": "/123456.png",
            },
          },
        },
        Object {
          "canonicalUrl": "https://foursquare.com/timeoutnewyork/list/summer-parties",
          "collaborative": false,
          "createdAt": 1374179715,
          "description": "Put on your dancing shoes and head to these sizzling spots for summer’s hottest parties.",
          "editable": false,
          "followers": Object {
            "count": 304,
          },
          "id": "51e85183498e59b10a3f7bea",
          "listItems": Object {
            "count": 14,
            "items": Array [
              Object {
                "createdAt": 1374180131,
                "id": "t51e8543b498e7d7abd657c24",
                "photo": Object {
                  "createdAt": 1374180441,
                  "height": 370,
                  "id": "51e854598bbdf64c27214c74",
                  "prefix": "https://igx.4sqi.net/img/general/",
                  "suffix": "/742542_Vj4eR1iQui22nyGV4G-xvfruWkRmr7hcOwXMaPbwVho.jpg",
                  "user": Object {
                    "firstName": "Time Out New York",
                    "gender": "none",
                    "id": "742542",
                    "photo": Object {
                      "prefix": "https://igx.4sqi.net/img/user/",
                      "suffix": "/XXHKCBSQHBORZNSR.jpg",
                    },
                    "type": "page",
                  },
                  "visibility": "public",
                  "width": 555,
                },
              },
            ],
          },
          "logView": true,
          "name": "Summer Parties",
          "photo": Object {
            "createdAt": 1374179263,
            "height": 370,
            "id": "51e84fbf8bbdf64c271c797b",
            "prefix": "https://igx.4sqi.net/img/general/",
            "suffix": "/742542_FrC-C6NUK0-7sjuLGQcVvyDcQhAhlfjd8Ghw_FxJigE.jpg",
            "user": Object {
              "firstName": "Time Out New York",
              "gender": "none",
              "id": "742542",
              "photo": Object {
                "prefix": "https://igx.4sqi.net/img/user/",
                "suffix": "/XXHKCBSQHBORZNSR.jpg",
              },
              "type": "page",
            },
            "visibility": "public",
            "width": 555,
          },
          "public": true,
          "type": "others",
          "updatedAt": 1374180690,
          "url": "/timeoutnewyork/list/summer-parties",
          "user": Object {
            "firstName": "Time Out New York",
            "gender": "none",
            "id": "742542",
            "photo": Object {
              "prefix": "https://igx.4sqi.net/img/user/",
              "suffix": "/XXHKCBSQHBORZNSR.jpg",
            },
            "type": "page",
          },
        },
      ],
      "name": "Lists from other people",
      "type": "others",
    },
  },
}
`;

exports[`selectors/venues should venues entities property 1`] = `Object {}`;

exports[`selectors/venues should venues entities property 2`] = `
Object {
  "3fd66200f964a5209beb1ee3": Object {
    "categories": Array [
      Object {
        "icon": Object {
          "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
          "suffix": ".png",
        },
        "id": "4bf58dd8d48988d1cc941735",
        "name": "Steakhouse",
        "pluralName": "Steakhouses",
        "primary": true,
        "shortName": "Steakhouse",
      },
    ],
    "hasPerk": false,
    "id": "3fd66200f964a5209beb1ee3",
    "location": Object {
      "address": "178 Broadway",
      "cc": "US",
      "city": "Brooklyn",
      "country": "United States",
      "crossStreet": "at Driggs Ave",
      "distance": 10,
      "formattedAddress": Array [
        "178 Broadway (at Driggs Ave)",
        "Brooklyn, NY 11211",
        "United States",
      ],
      "labeledLatLngs": Array [
        Object {
          "label": "display",
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
        },
      ],
      "lat": 40.70995790682886,
      "lng": -73.96229110893742,
      "postalCode": "11211",
      "state": "NY",
    },
    "name": "Peter Luger Steak House",
    "referralId": "v-1565543515",
    "venuePage": Object {
      "id": "77462637",
    },
  },
}
`;

exports[`selectors/venues should venues entities property 3`] = `undefined`;

exports[`selectors/venues should venues entities property 4`] = `
Object {
  "count": 1277,
  "items": Array [
    Object {
      "canonicalUrl": "https://foursquare.com/thesparkgroup/list/nyc-bars-w-free-wifi",
      "collaborative": false,
      "createdAt": 1341267590,
      "description": "",
      "editable": false,
      "followers": Object {
        "count": 108,
      },
      "id": "4ff21e86e4b0ac2746c17ac1",
      "listItems": Object {
        "count": 147,
        "items": Array [
          Object {
            "createdAt": 1341320340,
            "id": "v4cbcafab035d236aebebe64e",
          },
        ],
      },
      "name": "NYC Bars w/ Free Wi-Fi",
      "photo": Object {
        "createdAt": 1316910845,
        "height": 720,
        "id": "4e7e76fd46906788c6b9da00",
        "prefix": "https://igx.4sqi.net/img/general/",
        "suffix": "/XZYJNQSANIQTTIDP4ZFTEUDXF50Q5234VCKEEMXII1JSV0XS.jpg",
        "user": Object {
          "firstName": "John",
          "gender": "male",
          "id": "123456",
          "lastName": "Doe",
          "photo": Object {
            "prefix": "https://igx.4sqi.net/img/user/",
            "suffix": "/123456.jpg",
          },
        },
        "visibility": "public",
        "width": 537,
      },
      "public": true,
      "type": "others",
      "updatedAt": 1474559629,
      "url": "/thesparkgroup/list/nyc-bars-w-free-wifi",
      "user": Object {
        "firstName": "The Spark Group",
        "gender": "none",
        "id": "2027973",
        "photo": Object {
          "prefix": "https://igx.4sqi.net/img/user/",
          "suffix": "/123456.png",
        },
      },
    },
    Object {
      "canonicalUrl": "https://foursquare.com/timeoutnewyork/list/summer-parties",
      "collaborative": false,
      "createdAt": 1374179715,
      "description": "Put on your dancing shoes and head to these sizzling spots for summer’s hottest parties.",
      "editable": false,
      "followers": Object {
        "count": 304,
      },
      "id": "51e85183498e59b10a3f7bea",
      "listItems": Object {
        "count": 14,
        "items": Array [
          Object {
            "createdAt": 1374180131,
            "id": "t51e8543b498e7d7abd657c24",
            "photo": Object {
              "createdAt": 1374180441,
              "height": 370,
              "id": "51e854598bbdf64c27214c74",
              "prefix": "https://igx.4sqi.net/img/general/",
              "suffix": "/742542_Vj4eR1iQui22nyGV4G-xvfruWkRmr7hcOwXMaPbwVho.jpg",
              "user": Object {
                "firstName": "Time Out New York",
                "gender": "none",
                "id": "742542",
                "photo": Object {
                  "prefix": "https://igx.4sqi.net/img/user/",
                  "suffix": "/XXHKCBSQHBORZNSR.jpg",
                },
                "type": "page",
              },
              "visibility": "public",
              "width": 555,
            },
          },
        ],
      },
      "logView": true,
      "name": "Summer Parties",
      "photo": Object {
        "createdAt": 1374179263,
        "height": 370,
        "id": "51e84fbf8bbdf64c271c797b",
        "prefix": "https://igx.4sqi.net/img/general/",
        "suffix": "/742542_FrC-C6NUK0-7sjuLGQcVvyDcQhAhlfjd8Ghw_FxJigE.jpg",
        "user": Object {
          "firstName": "Time Out New York",
          "gender": "none",
          "id": "742542",
          "photo": Object {
            "prefix": "https://igx.4sqi.net/img/user/",
            "suffix": "/XXHKCBSQHBORZNSR.jpg",
          },
          "type": "page",
        },
        "visibility": "public",
        "width": 555,
      },
      "public": true,
      "type": "others",
      "updatedAt": 1374180690,
      "url": "/timeoutnewyork/list/summer-parties",
      "user": Object {
        "firstName": "Time Out New York",
        "gender": "none",
        "id": "742542",
        "photo": Object {
          "prefix": "https://igx.4sqi.net/img/user/",
          "suffix": "/XXHKCBSQHBORZNSR.jpg",
        },
        "type": "page",
      },
    },
  ],
  "name": "Lists from other people",
  "type": "others",
}
`;

exports[`selectors/venues should venues entities property 5`] = `Object {}`;

exports[`selectors/venues should venues entities property 6`] = `
Object {
  "others-Lists from other people": Object {
    "count": 1277,
    "items": Array [
      Object {
        "canonicalUrl": "https://foursquare.com/thesparkgroup/list/nyc-bars-w-free-wifi",
        "collaborative": false,
        "createdAt": 1341267590,
        "description": "",
        "editable": false,
        "followers": Object {
          "count": 108,
        },
        "id": "4ff21e86e4b0ac2746c17ac1",
        "listItems": Object {
          "count": 147,
          "items": Array [
            Object {
              "createdAt": 1341320340,
              "id": "v4cbcafab035d236aebebe64e",
            },
          ],
        },
        "name": "NYC Bars w/ Free Wi-Fi",
        "photo": Object {
          "createdAt": 1316910845,
          "height": 720,
          "id": "4e7e76fd46906788c6b9da00",
          "prefix": "https://igx.4sqi.net/img/general/",
          "suffix": "/XZYJNQSANIQTTIDP4ZFTEUDXF50Q5234VCKEEMXII1JSV0XS.jpg",
          "user": Object {
            "firstName": "John",
            "gender": "male",
            "id": "123456",
            "lastName": "Doe",
            "photo": Object {
              "prefix": "https://igx.4sqi.net/img/user/",
              "suffix": "/123456.jpg",
            },
          },
          "visibility": "public",
          "width": 537,
        },
        "public": true,
        "type": "others",
        "updatedAt": 1474559629,
        "url": "/thesparkgroup/list/nyc-bars-w-free-wifi",
        "user": Object {
          "firstName": "The Spark Group",
          "gender": "none",
          "id": "2027973",
          "photo": Object {
            "prefix": "https://igx.4sqi.net/img/user/",
            "suffix": "/123456.png",
          },
        },
      },
      Object {
        "canonicalUrl": "https://foursquare.com/timeoutnewyork/list/summer-parties",
        "collaborative": false,
        "createdAt": 1374179715,
        "description": "Put on your dancing shoes and head to these sizzling spots for summer’s hottest parties.",
        "editable": false,
        "followers": Object {
          "count": 304,
        },
        "id": "51e85183498e59b10a3f7bea",
        "listItems": Object {
          "count": 14,
          "items": Array [
            Object {
              "createdAt": 1374180131,
              "id": "t51e8543b498e7d7abd657c24",
              "photo": Object {
                "createdAt": 1374180441,
                "height": 370,
                "id": "51e854598bbdf64c27214c74",
                "prefix": "https://igx.4sqi.net/img/general/",
                "suffix": "/742542_Vj4eR1iQui22nyGV4G-xvfruWkRmr7hcOwXMaPbwVho.jpg",
                "user": Object {
                  "firstName": "Time Out New York",
                  "gender": "none",
                  "id": "742542",
                  "photo": Object {
                    "prefix": "https://igx.4sqi.net/img/user/",
                    "suffix": "/XXHKCBSQHBORZNSR.jpg",
                  },
                  "type": "page",
                },
                "visibility": "public",
                "width": 555,
              },
            },
          ],
        },
        "logView": true,
        "name": "Summer Parties",
        "photo": Object {
          "createdAt": 1374179263,
          "height": 370,
          "id": "51e84fbf8bbdf64c271c797b",
          "prefix": "https://igx.4sqi.net/img/general/",
          "suffix": "/742542_FrC-C6NUK0-7sjuLGQcVvyDcQhAhlfjd8Ghw_FxJigE.jpg",
          "user": Object {
            "firstName": "Time Out New York",
            "gender": "none",
            "id": "742542",
            "photo": Object {
              "prefix": "https://igx.4sqi.net/img/user/",
              "suffix": "/XXHKCBSQHBORZNSR.jpg",
            },
            "type": "page",
          },
          "visibility": "public",
          "width": 555,
        },
        "public": true,
        "type": "others",
        "updatedAt": 1374180690,
        "url": "/timeoutnewyork/list/summer-parties",
        "user": Object {
          "firstName": "Time Out New York",
          "gender": "none",
          "id": "742542",
          "photo": Object {
            "prefix": "https://igx.4sqi.net/img/user/",
            "suffix": "/XXHKCBSQHBORZNSR.jpg",
          },
          "type": "page",
        },
      },
    ],
    "name": "Lists from other people",
    "type": "others",
  },
}
`;
